--- a/research.html
+++ b/research.html
@@ -115,22 +115,22 @@
                     <ul style="text-align: left;">
                         <li>J. Weir, J. Zhao, <b>A. Chalmers</b>, T. Rhee. <quotestyle>“Deep Portrait Delighting”</quotestyle>, European Conference on Computer Vision (ECCV), 2022.</li>
                         <li>R. Chen, F. -L. Zhang, S. Finnie, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Casual 6-DoF: free-viewpoint panorama using a handheld 360° camera"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics, 2022, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2022.</li>
-                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022. <a href="data/2022_IlluminationBrowser.pdf">[pdf]</a></li>
+                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022. <a href="data/2022_IlluminationBrowser.pdf" target="_blank">[pdf]</a></li>
                     </ul>
 
                     <h4 style="text-align: left;">2021</h4>
                     <ul style="text-align: left;">
                         <li>C. Suppan, <b>A. Chalmers</b>, J. Zhao, A. Doronin, T. Rhee. <quotestyle>"Neural Screen Space Rendering of Direct Illumination"</quotestyle>, Pacific Graphics, 2021 (best conference paper award).</li>
                         <li>L. Petikam, <b>A. Chalmers</b>, K. Anjyo, T. Rhee. <quotestyle>"Art-directing Appearance using an Environment Map Latent Space"</quotestyle>, Pacific Graphics, 2021.</li>
-                        <li>J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021. <a href="data/2021_LightEstimation.pdf">[pdf]</a></li>
+                        <li>J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021. <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a></li>
                         <li>F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Spectator View: Enabling Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, ACM Interactive Surfaces and Spaces Conference (ISS), Proceedings of the ACM on Human-Computer Interaction (PACMHCI), 2021.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2020</h4>
                     <ul style="text-align: left;">
                         <li><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, IVCNZ, 2020.</li>
-                        <li><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021. <a href="data/2020_ReflectionMapEstimation.pdf">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf">[appendix]</a></li>
-                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020. <a href="data/2020_IlluminationSpace.pdf">[pdf]</a></li>
+                        <li><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021. <a href="data/2020_ReflectionMapEstimation.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a></li>
+                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020. <a href="data/2020_IlluminationSpace.pdf" target="_blank">[pdf]</a></li>
                         <li>F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2020.</li>
                         <li>T. Rhee, S. Thompson, D. Medeiros, R. dos Anjos, <b>A. Chalmers</b>, <quotestyle>"Augmented Virtual Teleportation for High-Fidelity Telecollaboration"</quotestyle>, IEEE Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020.</li>
                     </ul>
@@ -148,7 +148,7 @@
                         <li>C.J. Dean, J.P. Lewis, <b>A. Chalmers</b>, <quotestyle>"A magic wand for motion capture editing and edit propagation"</quotestyle>, SIGGRAPH Asia 2018 Technical Briefs, 2018.</li>
                         <li>T. Rhee, <b>A. Chalmers</b>, I. Loh, B. Allen, L. Petikam, S. Thompson, T. Revill, <quotestyle>"Mixed reality 360 live: live blending of virtual objects into 360° streamed video"</quotestyle>, ACM SIGGRAPH 2018 Real-Time Live!, 2018.</li>
                         <li>L. Petikam, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Visual Perception of Real World Depth Map Resolution for Mixed Reality"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), 2018.</li>
-                        <li><b>A. Chalmers</b>, <a href="https://researcharchive.vuw.ac.nz/xmlui/handle/10063/9100">"Illumination Space: A Feature Space for Radiance Maps"</a>, PhD Thesis, 2018. <a href="data/2018_AndrewChalmersThesis-compressed.pdf">[pdf-compressed]</a></li>
+                        <li><b>A. Chalmers</b>, <a href="https://researcharchive.vuw.ac.nz/xmlui/handle/10063/9100" target="_blank">"Illumination Space: A Feature Space for Radiance Maps"</a>, PhD Thesis, 2018. <a href="data/2018_AndrewChalmersThesis-compressed.pdf" target="_blank">[pdf-compressed]</a></li>
                     </ul>
 
                     <h4 style="text-align: left;">2017</h4>
