--- a/research.html
+++ b/research.html
@@ -115,14 +115,14 @@
                         <li>J. Weir, J. Zhao, <b>A. Chalmers</b>, T. Rhee. <quotestyle>“Deep Portrait Delighting”</quotestyle>, European Conference on Computer Vision (ECCV), 2022.</li>
                         <li>T. Rhee, <b>A. Chalmers</b>, W. K. Hoh, R. Roberts, W. Butcher, S. Finnie, and R. Barrett. <quotestyle>"Teleport to the Augmented Real-World with Live Interactive Effects (IFX)"</quotestyle>, ACM SIGGRAPH Asia 2022 Real-Time Live!, December 2022 [<a href="https://sa2022.siggraph.org/en/presentation/?id=real_107&sess=sess143" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?v=WoJE1uS8SAo&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
                         <li>R. Chen, F. L. Zhang, S. Finnie, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Casual 6-DoF: free-viewpoint panorama using a handheld 360° camera"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics, 2022, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2022.</li>
-                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022. <a href="data/2022_IlluminationBrowser.pdf" target="_blank">[pdf]</a></li>
+                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022 <a href="data/2022_IlluminationBrowser.pdf" target="_blank">[pdf]</a>.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2021</h4>
                     <ul style="text-align: left;">
                         <li>C. Suppan, <b>A. Chalmers</b>, J. Zhao, A. Doronin, T. Rhee. <quotestyle>"Neural Screen Space Rendering of Direct Illumination"</quotestyle>, Pacific Graphics, 2021 (best conference paper award).</li>
                         <li>L. Petikam, <b>A. Chalmers</b>, K. Anjyo, T. Rhee. <quotestyle>"Art-directing Appearance using an Environment Map Latent Space"</quotestyle>, Pacific Graphics, 2021.</li>
-                        <li>J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021. <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a></li>
+                        <li>J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021 <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a>.</li>
                         <li>F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Spectator View: Enabling Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, ACM Interactive Surfaces and Spaces Conference (ISS), Proceedings of the ACM on Human-Computer Interaction (PACMHCI), 2021.</li>
                     </ul>
 
@@ -130,7 +130,7 @@
                     <ul style="text-align: left;">
                         <li><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, IVCNZ, 2020.</li>
                         <li><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021. <a href="data/2020_ReflectionMapEstimation.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a></li>
-                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020. <a href="data/2020_IlluminationSpace.pdf" target="_blank">[pdf]</a></li>
+                        <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020 <a href="data/2020_IlluminationSpace.pdf" target="_blank">[pdf]</a>.</li>
                         <li>F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2020.</li>
                         <li>T. Rhee, S. Thompson, D. Medeiros, R. dos Anjos, <b>A. Chalmers</b>, <quotestyle>"Augmented Virtual Teleportation for High-Fidelity Telecollaboration"</quotestyle>, IEEE Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020.</li>
                     </ul>
@@ -165,7 +165,7 @@
                     <h4 style="text-align: left;">2014</h4>
                     <ul style="text-align: left;">
                         <li><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Optimised Illumination for Seamless Composites"</quotestyle>, Pacific Graphics, 2014.</li>
-                        <li><b>A. Chalmers</b>, J.P. Lewis, P. Hillman, C. Tait, T. Rhee, <quotestyle>"Sky Browser: Search for HDR Sky Maps"</quotestyle>, Pacific Graphics, 2014. <a href="data/2014_SkyBrowser.pdf" target="_blank">[pdf]</a></li>
+                        <li><b>A. Chalmers</b>, J.P. Lewis, P. Hillman, C. Tait, T. Rhee, <quotestyle>"Sky Browser: Search for HDR Sky Maps"</quotestyle>, Pacific Graphics, 2014 <a href="data/2014_SkyBrowser.pdf" target="_blank">[pdf]</a>.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2013</h4>
