--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
                 <h3>Publications</h3>
 
                 <h4 style="text-align: left;">2023</h4>
-                  <ul style="text-align: left;">
+                  <ul style="text-align: left; font-size: 12px">
                     <li>F. Zaman, C. Anslow, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"MRMAC: Mixed Reality Multi-User Asymmetric Collaboration"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023.</li>
 
                     <li>J. Zhao*, K. T. P Tran*, <b>A. Chalmers</b>, W. Khuan, R. Yao, A. Dey, J. Wilmot, J. Lin, M. Billinghurst, R. W. Lindeman, and T. Rhee, <quotestyle>"Deep Learning-based Simulator Sickness Estimation from 3D Motion"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023 (*authors contributed equally).</li>
@@ -111,7 +111,7 @@
                     </ul>
 
                 <h4 style="text-align: left;">2022</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li>J. Weir, J. Zhao, <b>A. Chalmers</b>, T. Rhee. <quotestyle>“Deep Portrait Delighting”</quotestyle>, European Conference on Computer Vision (ECCV), 2022.</li>
                         <li>T. Rhee, <b>A. Chalmers</b>, W. K. Hoh, R. Roberts, W. Butcher, S. Finnie, and R. Barrett. <quotestyle>"Teleport to the Augmented Real-World with Live Interactive Effects (IFX)"</quotestyle>, ACM SIGGRAPH Asia 2022 Real-Time Live!, December 2022 [<a href="https://sa2022.siggraph.org/en/presentation/?id=real_107&sess=sess143" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?v=WoJE1uS8SAo&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
                         <li>R. Chen, F. L. Zhang, S. Finnie, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Casual 6-DoF: free-viewpoint panorama using a handheld 360° camera"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics, 2022, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2022.</li>
@@ -119,7 +119,7 @@
                     </ul>
 
                     <h4 style="text-align: left;">2021</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li>C. Suppan, <b>A. Chalmers</b>, J. Zhao, A. Doronin, T. Rhee. <quotestyle>"Neural Screen Space Rendering of Direct Illumination"</quotestyle>, Pacific Graphics, 2021 (best conference paper award).</li>
                         <li>L. Petikam, <b>A. Chalmers</b>, K. Anjyo, T. Rhee. <quotestyle>"Art-directing Appearance using an Environment Map Latent Space"</quotestyle>, Pacific Graphics, 2021.</li>
                         <li>J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021 <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a>.</li>
@@ -127,7 +127,7 @@
                     </ul>
 
                     <h4 style="text-align: left;">2020</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, IVCNZ, 2020.</li>
                         <li><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021. <a href="data/2020_ReflectionMapEstimation.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a></li>
                         <li><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020 <a href="data/2020_IlluminationSpace.pdf" target="_blank">[pdf]</a>.</li>
@@ -136,14 +136,14 @@
                     </ul>
 
                     <h4 style="text-align: left;">2019</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li>S. Thompson, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Real-Time Mixed Reality Rendering for Underwater 360° Videos"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2019.</li>
                         <li>S. Thompson, <b>A. Chalmers</b>, D. Medeiros, T. Rhee, <quotestyle>"Underwater Toolkit: Mixed Reality Object Blending for 360° Videos"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), Demo, 2019.</li>
                         <li>S. Thompson, <b>A. Chalmers</b>, T. Rhee, <quotestyle>“Real-time Underwater Caustics for Mixed Reality 360° Videos”</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2019.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2018</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li>T. Rhee, <b>A. Chalmers</b>, M. Hicks, K. Kumagai, B. Allen, I. Loh, L. Petikam, K. Anjyo, <quotestyle>"MR360 interactive: playing with digital creatures in 360° videos"</quotestyle>, SIGGRAPH Asia 2018 Virtual & Augmented Reality, 2018 (2nd place award).</li>
                         <li>C.J. Dean, J.P. Lewis, <b>A. Chalmers</b>, <quotestyle>"A magic wand for motion capture editing and edit propagation"</quotestyle>, SIGGRAPH Asia 2018 Technical Briefs, 2018.</li>
                         <li>T. Rhee, <b>A. Chalmers</b>, I. Loh, B. Allen, L. Petikam, S. Thompson, T. Revill, <quotestyle>"Mixed reality 360 live: live blending of virtual objects into 360° streamed video"</quotestyle>, ACM SIGGRAPH 2018 Real-Time Live!, 2018.</li>
@@ -152,24 +152,24 @@
                     </ul>
 
                     <h4 style="text-align: left;">2017</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px"> 
                         <li>T. Rhee, L. Petikam, B. Allen, <b>A. Chalmers</b>, <quotestyle>"MR360: Mixed Reality Rendering for 360-degree Panoramic Videos"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2017.</li>
                         <li>N.A. Dodgson and <b>A. Chalmers</b>, <quotestyle>"Designing a computer graphics course for first year undergraduates"</quotestyle>, Eurographics, 2017.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2015</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li>W. Ma, T. Iorns, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Synthesising Radiance Maps from Legacy Outdoor Photographs for Real-time IBL on HMDs"</quotestyle>, IVCNZ, 2015.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2014</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Optimised Illumination for Seamless Composites"</quotestyle>, Pacific Graphics, 2014.</li>
                         <li><b>A. Chalmers</b>, J.P. Lewis, P. Hillman, C. Tait, T. Rhee, <quotestyle>"Sky Browser: Search for HDR Sky Maps"</quotestyle>, Pacific Graphics, 2014 <a href="data/2014_SkyBrowser.pdf" target="_blank">[pdf]</a>.</li>
                     </ul>
 
                     <h4 style="text-align: left;">2013</h4>
-                    <ul style="text-align: left;">
+                    <ul style="text-align: left; font-size: 12px">
                         <li><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Based Radiance Map for Realistic Composition"</quotestyle>, IVCNZ, 2013.</li>
                     </ul>
                 </div>
