--- a/research.html
+++ b/research.html
@@ -119,19 +119,19 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
-                    <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_MRMAC.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">F. Zaman, C. Anslow, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"MRMAC: Mixed Reality Multi-User Asymmetric Collaboration"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023.</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SimulatorSicknessEstimation-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. Zhao*, K. T. P Tran*, <b>A. Chalmers</b>, W. Khuan, R. Yao, A. Dey, J. Wilmot, J. Lin, M. Billinghurst, R. W. Lindeman, and T. Rhee, <quotestyle>"Deep Learning-based Simulator Sickness Estimation from 3D Motion"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023 (*authors contributed equally).</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_Sponge-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. O'Hagan, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Simulating the Geometric Growth of the Marine Sponge Crella Incrustans"</quotestyle>, IEEE VIS Short Paper, October 2023 [<a href="https://arxiv.org/abs/2308.00474" target="_blank">arXiv</a>].</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, F. Zaman, A. Stangnes, and V. Roberts, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3588430.3597245" target="_blank">"Real-time Stage Modelling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH 2023 Real-Time Live!, August 2023 (Audience Choice Award) [<a href="https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?si=70ogYvLqVqpJOfdD&v=OvC_Wwo6LXU&feature=youtu.be&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
                     </ul>
@@ -147,9 +147,9 @@
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">R. Chen, F. L. Zhang, S. Finnie, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Casual 6-DoF: free-viewpoint panorama using a handheld 360° camera"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics, 2022, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2022.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2022_IlluminationBrowser.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2022_IlluminationBrowser-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text"><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022 <a href="data/2022_IlluminationBrowser.pdf" target="_blank">[pdf]</a>.</li>
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022 <a href="data/2022_IlluminationBrowser-compressed.pdf" target="_blank">[pdf]</a>.</li>
                     </ul>
 
                     <h3 style="text-align: left;">2021</h3>
@@ -160,7 +160,7 @@
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">L. Petikam, <b>A. Chalmers</b>, K. Anjyo, T. Rhee. <quotestyle>"Art-directing Appearance using an Environment Map Latent Space"</quotestyle>, Pacific Graphics, 2021.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2021_LightEstimation.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2021_LightEstimation-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021 <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a>.</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
@@ -173,12 +173,12 @@
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, IVCNZ, 2020.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text"><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021. <a href="data/2020_ReflectionMapEstimation.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a></li>
-                        <li class="bullet-point" data-pdf-filename="data/2020_IlluminationSpace.pdf">
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021 <a href="data/2020_ReflectionMapEstimation-compressed.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a>.</li>
+                        <li class="bullet-point" data-pdf-filename="data/2020_IlluminationSpace-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text"><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020 <a href="data/2020_IlluminationSpace.pdf" target="_blank">[pdf]</a>.</li>
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020 <a href="data/2020_IlluminationSpace-compressed.pdf" target="_blank">[pdf]</a>.</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">F. Welsford-Ackroyd, <b>A. Chalmers</b>, R. dos Anjos, D. Medeiros, H. Kim, T. Rhee, <quotestyle>"Asymmetric Interaction between HMD Wearers and Spectators with a Large Display"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), Poster, 2020.</li>
@@ -207,19 +207,19 @@
 
                     <h3 style="text-align: left;">2018</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_MR360-Interactive.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, M. Hicks, K. Kumagai, B. Allen, I. Loh, L. Petikam, K. Anjyo, <quotestyle>"MR360 interactive: playing with digital creatures in 360° videos"</quotestyle>, SIGGRAPH Asia 2018 Virtual & Augmented Reality, 2018 (2nd place award).</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_MagicWand.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">C. J. Dean, J.P. Lewis, <b>A. Chalmers</b>, <quotestyle>"A magic wand for motion capture editing and edit propagation"</quotestyle>, SIGGRAPH Asia 2018 Technical Briefs, 2018.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_S-RTL.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, I. Loh, B. Allen, L. Petikam, S. Thompson, T. Revill, <quotestyle>"Mixed reality 360 live: live blending of virtual objects into 360° streamed video"</quotestyle>, ACM SIGGRAPH 2018 Real-Time Live!, 2018.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_VisualPerceptionDepthMap-compressed.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">L. Petikam, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Visual Perception of Real World Depth Map Resolution for Mixed Reality"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), 2018.</div>
                         </li>
@@ -232,11 +232,11 @@
 
                     <h3 style="text-align: left;">2017</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2017_MR360.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">T. Rhee, L. Petikam, B. Allen, <b>A. Chalmers</b>, <quotestyle>"MR360: Mixed Reality Rendering for 360-degree Panoramic Videos"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2017.</div>
+                            <div class="bullet-point-text">T. Rhee, L. Petikam, B. Allen, <b>A. Chalmers</b>, <quotestyle>"MR360: Mixed Reality Rendering for 360° Panoramic Videos"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2017.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2017_CG_Course.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">N. A. Dodgson and <b>A. Chalmers</b>, <quotestyle>"Designing a computer graphics course for first year undergraduates"</quotestyle>, Eurographics, 2017.</div>
                         </li>
@@ -244,7 +244,7 @@
 
                     <h3 style="text-align: left;">2015</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2015_Synthesising_RM.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">W. Ma, T. Iorns, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Synthesising Radiance Maps from Legacy Outdoor Photographs for Real-time IBL on HMDs"</quotestyle>, IVCNZ, 2015.</div>
                         </li>
@@ -252,19 +252,19 @@
                         
                     <h3 style="text-align: left;">2014</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2014_Perceptual_IBL.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Optimised Illumination for Seamless Composites"</quotestyle>, Pacific Graphics, 2014</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2014_SkyBrowser.pdf">
-                            <a class="pdf-link" href="data/2014_SkyBrowser.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas></a>
-                            <div class="bullet-point-text"><b>A. Chalmers</b>, J.P. Lewis, P. Hillman, C. Tait, T. Rhee, <quotestyle>"Sky Browser: Search for HDR Sky Maps"</quotestyle>, Pacific Graphics, 2014 <a href="data/2014_SkyBrowser.pdf" target="_blank">[pdf]</a>.</div>
+                        <li class="bullet-point" data-pdf-filename="data/2014_SkyBrowser-compressed.pdf">
+                            <a class="pdf-link" href="data/2014_SkyBrowser-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas></a>
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, J.P. Lewis, P. Hillman, C. Tait, T. Rhee, <quotestyle>"Sky Browser: Search for HDR Sky Maps"</quotestyle>, Pacific Graphics, 2014 <a href="data/2014_SkyBrowser-compressed.pdf" target="_blank">[pdf]</a>.</div>
                         </li>
                     </ul>
 
                     <h3 style="text-align: left;">2013</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2013_Perceptual_IBL.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Based Radiance Map for Realistic Composition"</quotestyle>, IVCNZ, 2013.</div>
                         </li>
