more thumbnail control, page num and y offset

--- a/research.html
+++ b/research.html
@@ -119,26 +119,26 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
-                    <li class="bullet-point" data-pdf-filename="data/2023_MRMAC.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_MRMAC.pdf" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">F. Zaman, C. Anslow, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"MRMAC: Mixed Reality Multi-User Asymmetric Collaboration"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023.</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/2023_SimulatorSicknessEstimation-compressed.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SimulatorSicknessEstimation-compressed.pdf" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. Zhao*, K. T. P Tran*, <b>A. Chalmers</b>, W. Khuan, R. Yao, A. Dey, J. Wilmot, J. Lin, M. Billinghurst, R. W. Lindeman, and T. Rhee, <quotestyle>"Deep Learning-based Simulator Sickness Estimation from 3D Motion"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023 (*authors contributed equally).</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/2023_Sponge-compressed.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2023_Sponge-compressed.pdf" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. O'Hagan, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Simulating the Geometric Growth of the Marine Sponge Crella Incrustans"</quotestyle>, IEEE VIS Short Paper, October 2023 [<a href="https://arxiv.org/abs/2308.00474" target="_blank">arXiv</a>].</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf">
+                    <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf" data-pdf-Off-Set-Y="25">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, F. Zaman, A. Stangnes, and V. Roberts, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3588430.3597245" target="_blank">"Real-time Stage Modelling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH 2023 Real-Time Live!, August 2023 (Audience Choice Award) [<a href="https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?si=70ogYvLqVqpJOfdD&v=OvC_Wwo6LXU&feature=youtu.be&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
                     </ul>
 
                 <h3 style="text-align: left;">2022</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2022_DeepPortraitDelightig-compressed.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="30">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. Weir, J. Zhao, <b>A. Chalmers</b>, T. Rhee. <quotestyle>“Deep Portrait Delighting”</quotestyle>, European Conference on Computer Vision (ECCV), 2022.</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
@@ -160,7 +160,7 @@
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">L. Petikam, <b>A. Chalmers</b>, K. Anjyo, T. Rhee. <quotestyle>"Art-directing Appearance using an Environment Map Latent Space"</quotestyle>, Pacific Graphics, 2021.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2021_LightEstimation-compressed.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2021_LightEstimation-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. Zhao, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Adaptive Light Estimation using Dynamic Filtering for Diverse Lighting Conditions"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2021 <a href="data/2021_LightEstimation.pdf" target="_blank">[pdf]</a>.</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
@@ -173,7 +173,7 @@
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, IVCNZ, 2020.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation-compressed.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation-compressed.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="40">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021 <a href="data/2020_ReflectionMapEstimation-compressed.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a>.</li>
                         <li class="bullet-point" data-pdf-filename="data/2020_IlluminationSpace-compressed.pdf">
@@ -280,10 +280,10 @@
         pdfjsLib.GlobalWorkerOptions.workerSrc = "pdf.worker.js";
 
         // Define the crop parameters
-        const cropX = 5;
-        const cropY = 40;
+        //const cropX = 5;
+        //const cropY = 40;
         const offSetX = 0;
-        const offSetY = 10;
+        //const offSetY = 10;
         const cropWidth = 100;
         const cropHeight = cropWidth*1.41;
         const scale = 1.0;
@@ -291,10 +291,20 @@
         // Load the PDF file for each bullet point
         document.querySelectorAll(".bullet-point").forEach(bulletPoint => {
             const pdfFileName = bulletPoint.dataset.pdfFilename; // Get the custom PDF file name from data attribute
-            const canvas = bulletPoint.querySelector(".pdf-canvas");
+			const pageAttribute = bulletPoint.dataset.pdfPage; // Get the page number attribute
+			const cropXAttribute = bulletPoint.dataset.pdfCropX; 
+			const cropYAttribute = bulletPoint.dataset.pdfCropY; 
+			const offSetYAttribute = bulletPoint.dataset.pdfOffSetY; 
+
+			// Determine the page number, defaulting to 1 if not provided
+			const pdfPage = pageAttribute ? parseInt(pageAttribute) : 1;
+			const cropX = cropXAttribute ? parseInt(cropXAttribute) : 5;
+			const cropY = cropYAttribute ? parseInt(cropYAttribute) : 40;
+			const offSetY = offSetYAttribute ? parseInt(offSetYAttribute) : 10;
+			const canvas = bulletPoint.querySelector(".pdf-canvas");
 
             pdfjsLib.getDocument(pdfFileName).promise.then(pdfDocument => {
-                pdfDocument.getPage(1).then(page => {
+                pdfDocument.getPage(pdfPage).then(page => {
                     const ctx = canvas.getContext("2d");
                     const viewport = page.getViewport({ scale });
 
