thesis thumbnail pg num

--- a/research.html
+++ b/research.html
@@ -131,7 +131,7 @@
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">J. O'Hagan, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Simulating the Geometric Growth of the Marine Sponge Crella Incrustans"</quotestyle>, IEEE VIS Short Paper, October 2023 [<a href="https://arxiv.org/abs/2308.00474" target="_blank">arXiv</a>].</li>
 
-                    <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf" data-pdf-Off-Set-Y="25">
+                    <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf" data-pdf-Off-Set-Y="10">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, F. Zaman, A. Stangnes, and V. Roberts, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3588430.3597245" target="_blank">"Real-time Stage Modelling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH 2023 Real-Time Live!, August 2023 (Audience Choice Award) [<a href="https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?si=70ogYvLqVqpJOfdD&v=OvC_Wwo6LXU&feature=youtu.be&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
                     </ul>
@@ -147,7 +147,7 @@
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">R. Chen, F. L. Zhang, S. Finnie, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Casual 6-DoF: free-viewpoint panorama using a handheld 360° camera"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics, 2022, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2022.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2022_IlluminationBrowser-compressed.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2022_IlluminationBrowser-compressed.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="30">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Browser: An intuitive representation for radiance map databases"</quotestyle>, Computers & Graphics, 2022 <a href="data/2022_IlluminationBrowser-compressed.pdf" target="_blank">[pdf]</a>.</li>
                     </ul>
@@ -223,8 +223,8 @@
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">L. Petikam, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Visual Perception of Real World Depth Map Resolution for Mixed Reality"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), 2018.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2018_AndrewChalmersThesis-compressed.pdf">
-                            <a class="pdf-link" href="data/2018_AndrewChalmersThesis.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas></a>
+                        <li class="bullet-point" data-pdf-filename="data/2018_AndrewChalmersThesis-compressed.pdf" data-pdf-page="120" data-pdf-Off-Set-Y="15">
+                            <a class="pdf-link" href="data/2018_AndrewChalmersThesis-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas></a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, PhD Thesis, 2018.</div>
                         </li>
                     </ul>
