added ivcnz 2023 paper

--- a/research.html
+++ b/research.html
@@ -134,6 +134,10 @@
                     <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf" data-pdf-Off-Set-Y="10">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, F. Zaman, A. Stangnes, and V. Roberts, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3588430.3597245" target="_blank">"Real-time Stage Modelling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH 2023 Real-Time Live!, August 2023 (Audience Choice Award) [<a href="https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?si=70ogYvLqVqpJOfdD&v=OvC_Wwo6LXU&feature=youtu.be&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
+
+                    <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
+                        <canvas class="pdf-canvas" width="100" height="100"></canvas>
+                        <div class="bullet-point-text">J. Weir, J. Zhao, <b>A. Chalmers</b>, T. Rhee. <quotestyle>“De-lighting Human Images Using Region-Specific Data Augmentation”</quotestyle>, International Conference on Image and Vision Computing New Zealand (IVCNZ), 2023.</li>  	
                     </ul>
 
                 <h3 style="text-align: left;">2022</h3>
@@ -172,7 +176,7 @@
                     <ul class="bullet-list">
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text"><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, IVCNZ, 2020.</li>
+                            <div class="bullet-point-text"><b>A. Chalmers</b> and T. Rhee, <quotestyle>"Shadow-based Light Detection for HDR Environment Maps"</quotestyle>, International Conference on Image and Vision Computing New Zealand (IVCNZ), 2020.</li>
                         <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation-compressed.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="40">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021 <a href="data/2020_ReflectionMapEstimation-compressed.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a>.</li>
@@ -186,7 +190,6 @@
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, S. Thompson, D. Medeiros, R. dos Anjos, <b>A. Chalmers</b>, <quotestyle>"Augmented Virtual Teleportation for High-Fidelity Telecollaboration"</quotestyle>, IEEE Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020.</li>
                     </ul>
-
 
 
                     <h3 style="text-align: left;">2019</h3>
@@ -246,7 +249,7 @@
                     <ul class="bullet-list">
                         <li class="bullet-point" data-pdf-filename="data/2015_Synthesising_RM.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="40">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">W. Ma, T. Iorns, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Synthesising Radiance Maps from Legacy Outdoor Photographs for Real-time IBL on HMDs"</quotestyle>, IVCNZ, 2015.</div>
+                            <div class="bullet-point-text">W. Ma, T. Iorns, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Synthesising Radiance Maps from Legacy Outdoor Photographs for Real-time IBL on HMDs"</quotestyle>, International Conference on Image and Vision Computing New Zealand (IVCNZ), 2015.</div>
                         </li>
                     </ul>
                         
@@ -266,11 +269,9 @@
                     <ul class="bullet-list">
                         <li class="bullet-point" data-pdf-filename="data/2013_Perceptual_IBL.pdf" data-pdf-page="4" data-pdf-Off-Set-Y="33">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text"><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Based Radiance Map for Realistic Composition"</quotestyle>, IVCNZ, 2013.</div>
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Based Radiance Map for Realistic Composition"</quotestyle>, International Conference on Image and Vision Computing New Zealand (IVCNZ), 2013.</div>
                         </li>
                     </ul>
-
-
                 </div>
             </main>
         </div> <!-- Close the container div -->
