--- a/research.html
+++ b/research.html
@@ -119,21 +119,25 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SimPlatform.pdf" data-pdf-Off-Set-Y="35">
+                            <canvas class="pdf-canvas" width="100" height="100"></canvas>
+                            <div class="bullet-point-text"><b>A. Chalmers</b>, Junhong Zhao, Weng Khuan Hoh, James Drown, Simon Finnie, Richard Yao, James Lin, James Wilmott, Arindam Dey, Mark Billinghurst, and T. Rhee, <quotestyle>"A Motion-Simulation Platform to Generate Synthetic Motion Data for Computer Vision Tasks"</quotestyle>, SIGGRAPH Asia Technical Communications, 2023.</li>
+
                     <li class="bullet-point" data-pdf-filename="data/2023_MRMAC.pdf" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">F. Zaman, C. Anslow, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"MRMAC: Mixed Reality Multi-User Asymmetric Collaboration"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023.</li>
+                            <div class="bullet-point-text">F. Zaman, C. Anslow, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"MRMAC: Mixed Reality Multi-User Asymmetric Collaboration"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2023.</li>
 
                     <li class="bullet-point" data-pdf-filename="data/2023_SimulatorSicknessEstimation-compressed.pdf" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">J. Zhao*, K. T. P Tran*, <b>A. Chalmers</b>, W. Khuan, R. Yao, A. Dey, J. Wilmot, J. Lin, M. Billinghurst, R. W. Lindeman, and T. Rhee, <quotestyle>"Deep Learning-based Simulator Sickness Estimation from 3D Motion"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), October 2023 (*authors contributed equally).</li>
+                            <div class="bullet-point-text">J. Zhao*, K. T. P Tran*, <b>A. Chalmers</b>, W. Khuan, R. Yao, A. Dey, J. Wilmot, J. Lin, M. Billinghurst, R. W. Lindeman, and T. Rhee, <quotestyle>"Deep Learning-based Simulator Sickness Estimation from 3D Motion"</quotestyle>, IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2023 (*authors contributed equally).</li>
 
                     <li class="bullet-point" data-pdf-filename="data/2023_Sponge-compressed.pdf" data-pdf-Off-Set-Y="35">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">J. O'Hagan, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Simulating the Geometric Growth of the Marine Sponge Crella Incrustans"</quotestyle>, IEEE VIS Short Paper, October 2023 [<a href="https://arxiv.org/abs/2308.00474" target="_blank">arXiv</a>].</li>
+                            <div class="bullet-point-text">J. O'Hagan, <b>A. Chalmers</b>, and T. Rhee, <quotestyle>"Simulating the Geometric Growth of the Marine Sponge Crella Incrustans"</quotestyle>, IEEE VIS Short Paper, 2023 [<a href="https://arxiv.org/abs/2308.00474" target="_blank">arXiv</a>].</li>
 
                     <li class="bullet-point" data-pdf-filename="data/2018_S-RTL_StageModelling.pdf" data-pdf-Off-Set-Y="10">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, F. Zaman, A. Stangnes, and V. Roberts, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3588430.3597245" target="_blank">"Real-time Stage Modelling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH 2023 Real-Time Live!, August 2023 (Audience Choice Award) [<a href="https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?si=70ogYvLqVqpJOfdD&v=OvC_Wwo6LXU&feature=youtu.be&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
+                            <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, F. Zaman, A. Stangnes, and V. Roberts, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3588430.3597245" target="_blank">"Real-time Stage Modelling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH 2023 Real-Time Live!, 2023 (Audience Choice Award) [<a href="https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?si=70ogYvLqVqpJOfdD&v=OvC_Wwo6LXU&feature=youtu.be&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
 
                     <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                         <canvas class="pdf-canvas" width="100" height="100"></canvas>
@@ -147,7 +151,7 @@
                             <div class="bullet-point-text">J. Weir, J. Zhao, <b>A. Chalmers</b>, T. Rhee. <quotestyle>“Deep Portrait Delighting”</quotestyle>, European Conference on Computer Vision (ECCV), 2022.</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, W. K. Hoh, R. Roberts, W. Butcher, S. Finnie, and R. Barrett. <quotestyle>"Teleport to the Augmented Real-World with Live Interactive Effects (IFX)"</quotestyle>, ACM SIGGRAPH Asia 2022 Real-Time Live!, December 2022 [<a href="https://sa2022.siggraph.org/en/presentation/?id=real_107&sess=sess143" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?v=WoJE1uS8SAo&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
+                            <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, W. K. Hoh, R. Roberts, W. Butcher, S. Finnie, and R. Barrett. <quotestyle>"Teleport to the Augmented Real-World with Live Interactive Effects (IFX)"</quotestyle>, ACM SIGGRAPH Asia 2022 Real-Time Live!, 2022 [<a href="https://sa2022.siggraph.org/en/presentation/?id=real_107&sess=sess143" target="_blank">event page</a>] [<a href="https://www.youtube.com/watch?v=WoJE1uS8SAo&ab_channel=CMICNZ" target="_blank">youtube</a>].</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">R. Chen, F. L. Zhang, S. Finnie, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Casual 6-DoF: free-viewpoint panorama using a handheld 360° camera"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics, 2022, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2022.</li>
@@ -216,7 +220,7 @@
                         </li>
                         <li class="bullet-point" data-pdf-filename="data/2018_MagicWand.pdf" data-pdf-page="4" data-pdf-Off-Set-Y="-13">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
-                            <div class="bullet-point-text">C. J. Dean, J.P. Lewis, <b>A. Chalmers</b>, <quotestyle>"A magic wand for motion capture editing and edit propagation"</quotestyle>, SIGGRAPH Asia 2018 Technical Briefs, 2018.</div>
+                            <div class="bullet-point-text">C. J. Dean, J.P. Lewis, <b>A. Chalmers</b>, <quotestyle>"A magic wand for motion capture editing and edit propagation"</quotestyle>, SIGGRAPH Asia Technical Briefs, 2018.</div>
                         </li>
                         <li class="bullet-point" data-pdf-filename="data/2018_S-RTL.pdf">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
