updated pdf publication

--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
-                    <li class="bullet-point" data-pdf-filename="data/2023_SimPlatform.pdf" data-pdf-Off-Set-Y="35">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SimPlatform.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="5">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, Junhong Zhao, Weng Khuan Hoh, James Drown, Simon Finnie, Richard Yao, James Lin, James Wilmott, Arindam Dey, Mark Billinghurst, and T. Rhee, <quotestyle>"A Motion-Simulation Platform to Generate Synthetic Motion Data for Computer Vision Tasks"</quotestyle>, SIGGRAPH Asia Technical Communications, 2023.</li>
 
