--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
 
                 <h3 style="text-align: left;">2023</h3>
                     <ul class="bullet-list">
-                    <li class="bullet-point" data-pdf-filename="data/2023_SA-RTL_AuditoriumModelling.pdf" data-pdf-Off-Set-Y="10">
+                    <li class="bullet-point" data-pdf-filename="data/2023_SA-RTL_AuditoriumModelling.pdf">
                             <a href="data/2023_SA-RTL_AuditoriumModelling.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas> </a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, F. Zaman, A. Stangnes, S. Finnie, H. S. Nguyen, J. Han, and T. Rhee, <quotestyle><a href="https://dl.acm.org/doi/10.1145/3610539.3630250" target="_blank">"Real-time Auditorium Modeling and Visual Effects for Live Performances"</a></quotestyle>, ACM SIGGRAPH Asia 2023 Real-Time Live!, 2023 [<a href="https://asia.siggraph.org/2023/presentation/?id=real_110&sess=sess210" target="_blank">event page</a>] [youtube].</li>
 
